# api/v1/models/network_attachment_element.go
@@ -1,0 +1,183 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright Authors of Cilium
+// SPDX-License-Identifier: Apache-2.0
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// NetworkAttachmentElement A network attachment
+//
+// swagger:model NetworkAttachmentElement
+type NetworkAttachmentElement struct {
+
+	// IPAM parameters
+	Ipam *NetworkAttachmentIPAMParameters `json:"ipam,omitempty"`
+
+	// Name of the network this pod is attached to
+	// Required: true
+	Name *string `json:"name"`
+
+	// Network routes to set up for this network attachment inside the pod
+	Routes []*NetworkAttachmentRoute `json:"routes"`
+}
+
+// Validate validates this network attachment element
+func (m *NetworkAttachmentElement) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateIpam(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateRoutes(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *NetworkAttachmentElement) validateIpam(formats strfmt.Registry) error {
+	if swag.IsZero(m.Ipam) { // not required
+		return nil
+	}
+
+	if m.Ipam != nil {
+		if err := m.Ipam.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("ipam")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("ipam")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *NetworkAttachmentElement) validateName(formats strfmt.Registry) error {
+
+	if err := validate.Required("name", "body", m.Name); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *NetworkAttachmentElement) validateRoutes(formats strfmt.Registry) error {
+	if swag.IsZero(m.Routes) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Routes); i++ {
+		if swag.IsZero(m.Routes[i]) { // not required
+			continue
+		}
+
+		if m.Routes[i] != nil {
+			if err := m.Routes[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("routes" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("routes" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// ContextValidate validate this network attachment element based on the context it is used
+func (m *NetworkAttachmentElement) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateIpam(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateRoutes(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *NetworkAttachmentElement) contextValidateIpam(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.Ipam != nil {
+		if err := m.Ipam.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("ipam")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("ipam")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *NetworkAttachmentElement) contextValidateRoutes(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Routes); i++ {
+
+		if m.Routes[i] != nil {
+			if err := m.Routes[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("routes" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("routes" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *NetworkAttachmentElement) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *NetworkAttachmentElement) UnmarshalBinary(b []byte) error {
+	var res NetworkAttachmentElement
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
