# api/v1/models/network_attachment_ip_a_m_parameters.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright Authors of Cilium
+// SPDX-License-Identifier: Apache-2.0
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// NetworkAttachmentIPAMParameters IPAM parameters of a network attachment
+//
+// swagger:model NetworkAttachmentIPAMParameters
+type NetworkAttachmentIPAMParameters struct {
+
+	// Name of the IPAM pool this network attachment allocates from
+	IpamPool string `json:"ipam-pool,omitempty"`
+}
+
+// Validate validates this network attachment IP a m parameters
+func (m *NetworkAttachmentIPAMParameters) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this network attachment IP a m parameters based on context it is used
+func (m *NetworkAttachmentIPAMParameters) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *NetworkAttachmentIPAMParameters) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *NetworkAttachmentIPAMParameters) UnmarshalBinary(b []byte) error {
+	var res NetworkAttachmentIPAMParameters
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
