# api/v1/models/network_attachment_route.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright Authors of Cilium
+// SPDX-License-Identifier: Apache-2.0
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// NetworkAttachmentRoute Route for a network attachment
+//
+// swagger:model NetworkAttachmentRoute
+type NetworkAttachmentRoute struct {
+
+	// Route destination
+	Destination string `json:"destination,omitempty"`
+
+	// Route gateway
+	Gateway string `json:"gateway,omitempty"`
+}
+
+// Validate validates this network attachment route
+func (m *NetworkAttachmentRoute) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this network attachment route based on context it is used
+func (m *NetworkAttachmentRoute) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *NetworkAttachmentRoute) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *NetworkAttachmentRoute) UnmarshalBinary(b []byte) error {
+	var res NetworkAttachmentRoute
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
